# AI-Drawing-Inspector

./: .gitignore  046-935_full_tree_v2.txt  046-935_mates.txt  400S_detailed_structure_fixed.json  400S_file_part_mapping.json  ASME_REFERENCE_UI_PLAN.md  DrawingEvidence_Schema.md  FASTER_WHISPER_PLAN.md  FEA_VISUALIZATION_PLAN.md  FINDINGS_ANNOTATION_LINKING_PLAN.md  GEOMETRY_DIFF_PLAN.md  LIBRARY_ENTRY_GUIDE.md  PROJECT_RECAP.txt  PROJECT_STATUS.md  README.md  SCOUT_API_PLAN.md  TASK_1030017_ENRICHMENT.md  _test_views.py  _verify_feature110.py  ai_inspector_final.ipynb  ai_inspector_final_fixed.ipynb  ai_inspector_v2.ipynb  ai_inspector_v3.ipynb  claude-progress.txt  claude_plan.md  geometry_worker.py  init.sh  next_pn.py  parse_mates.py  pyproject.toml  requirements.txt  server.py  setup.py  spatial_inspection.ipynb  sw_assemblies_db.json  sw_components_all.json  sw_inspector_requirements.json  sw_mate_specs.json  sw_mating_context.json  sw_parts_db.json  (+2 more)
.autoforge/: allowed_commands.yaml
SolidWorksExtractor/: ColorizeOnly.cs  FEA_WORKER_README.md  Program.cs  README.md  SolidWorksExtractor.csproj  SolidWorksExtractor.sln
ai_inspector/: __init__.py  config.py  contracts.py
datasets/: README.md  callouts.yaml
incoming_fea/: README.md
notebooks/: ai_inspector_v4.ipynb  test_v4_modules.ipynb  train_yolo_obb.ipynb
schemas/: canonicalization_rules.json  canonicalizer.py  drawing_evidence_v1.1.0.schema.json  drawing_evidence_v1.1.1.schema.json  sw_to_evidence_mapping.json
scripts/: expected_fea_mounting_plate.json  extract_drawing_views_one_by_one.ps1  (+5 more)
(+131 files in other folders)
