[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_inspector"
version = "4.0.0"
description = "AI-powered engineering drawing inspection system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "Continental Machines Inc."}
]
dependencies = [
    "pymupdf>=1.23.0",
    "pillow>=9.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
colab = [
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "qwen-vl-utils",
    "bitsandbytes",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["ai_inspector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
